--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "scheduet-demo2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^122.0.0"
+    "googleapis": "^122.0.0",
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
